Revert "Fix disabled approval profile"
This reverts commit 015f4e1d02867a8dcc32efd884cead51da677224.